# ai_news_sender

./: .dockerignore  .gitignore  Dockerfile  README.md  credentials.json  debug_extract.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_news.py
app/: agents.py  crew.py  llm.py  main.py  mcp_client.py  tasks.py  tools.py
backend/: main.py
frontend/: app.py
mcp_servers/mail_server/: auth.py  server.py
mcp_servers/news_server/: server.py  tools.py
mcp_servers/news_server/services/: cleaner.py  extractor_service.py  rss_service.py
